# weather-app

./: AbstractResource.h  CMakeLists.txt  Param.h  README.md  ResourceWithParams.h  RestManager.cpp  RestManager.h  main.cpp
gui/: AppSettings.qml  Main.qml  Screen.qml  SettingsPopup.qml
gui/screens/: Start.qml  WeatherForecast.qml
